Fix .nav-item padding on mobile

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3355,7 +3355,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3891,7 +3890,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -4172,31 +4170,32 @@ a.nav-item.is-tab.is-active {
   z-index: 2;
 }
 
-.nav > .container {
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 50px;
-  width: 100%;
+@media screen and (min-width: 769px) {
+  .nav > .container {
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 50px;
+    width: 100%;
+  }
+  .nav > .container > .nav-left > .nav-item:first-child:not(.is-tab) {
+    padding-left: 0;
+  }
+  .nav > .container > .nav-right > .nav-item:last-child:not(.is-tab) {
+    padding-right: 0;
+  }
 }
 
-.nav > .container > .nav-left > .nav-item:first-child:not(.is-tab) {
-  padding-left: 0;
-}
-
-.nav > .container > .nav-right > .nav-item:last-child:not(.is-tab) {
-  padding-right: 0;
-}
-
-.container > .nav > .nav-left > .nav-item:first-child:not(.is-tab) {
-  padding-left: 0;
-}
-
-.container > .nav > .nav-right > .nav-item:last-child:not(.is-tab) {
-  padding-right: 0;
+@media screen and (min-width: 769px) {
+  .container > .nav > .nav-left > .nav-item:first-child:not(.is-tab) {
+    padding-left: 0;
+  }
+  .container > .nav > .nav-right > .nav-item:last-child:not(.is-tab) {
+    padding-right: 0;
+  }
 }
 
 .nav.has-shadow {
@@ -5583,7 +5582,6 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5617,7 +5615,6 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
