--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -113,24 +113,26 @@ a.nav-item
   position: relative
   text-align: center
   z-index: 2
-  & > .container
-    align-items: stretch
-    display: flex
-    min-height: $nav-height
-    width: 100%
-    & > .nav-left
-      & > .nav-item:first-child:not(.is-tab)
-        padding-left: 0
-    & > .nav-right
-      & > .nav-item:last-child:not(.is-tab)
-        padding-right: 0
-  .container > &
-    & > .nav-left
-      & > .nav-item:first-child:not(.is-tab)
-        padding-left: 0
-    & > .nav-right
-      & > .nav-item:last-child:not(.is-tab)
-        padding-right: 0
+  +tablet
+    & > .container
+      align-items: stretch
+      display: flex
+      min-height: $nav-height
+      width: 100%
+      & > .nav-left
+        & > .nav-item:first-child:not(.is-tab)
+          padding-left: 0
+      & > .nav-right
+        & > .nav-item:last-child:not(.is-tab)
+          padding-right: 0
+  +tablet
+    .container > &
+      & > .nav-left
+        & > .nav-item:first-child:not(.is-tab)
+          padding-left: 0
+      & > .nav-right
+        & > .nav-item:last-child:not(.is-tab)
+          padding-right: 0
   // Modifiers
   &.has-shadow
     box-shadow: 0 2px 3px rgba($black, 0.1)
